Bug #5455 multi update have not protaction of updating table which has update
Submitted: 7 Sep 2004 21:27 Modified: 16 Sep 2004 18:09
Reporter: Oleksandr Byelkin
Status: Closed
Category:Server Severity:S2 (Serious)
Version:4.1 OS:
Assigned to: Oleksandr Byelkin Target Version:

[7 Sep 2004 21:27] Oleksandr Byelkin
Description:
only usual UPDATE diasllow useing same table for updating and fetching 

How to repeat:
create table t1 (col1 int); 
create table t2 (col1 int); 
update t1,t2 set t1.col1 = (select max(col1) from t1) where t1.col1 = t2.col1; 
 
but  
 
update t1 set col1 = (select max(col1) from t1); fails
[8 Sep 2004 12:40] Oleksandr Byelkin
ChangeSet 
  1.2009 04/09/08 13:39:15 bell@sanja.is.com.ua +6 -0 
  check that table used in multi-update is unique added (BUG#5455)
[16 Sep 2004 18:09] Oleksandr Byelkin
pushed.