check that table used in multi-update is unique added (BUG#5455)

mysql-test/r/multi_update.result:
  multi* unique updating table check
mysql-test/t/multi_update.test:
  multi* unique updating table check
sql/sql_lex.cc:
  new method to check table only in subqueries
sql/sql_lex.h:
  new method to check table only in subqueries
sql/sql_parse.cc:
  used new method to check table only in subqueries
sql/sql_update.cc:
  check that table is unique added